--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
     <head>
-        <title>Bank MoneyMooMoo</title>
-        <h1>Bank MoneyMooMoo</h1>
-        <h2> Family, Safety, home </h2>
+        <title>Bank MoneyMoo</title>
+        <h1>Bank MoneyMoo</h1>
+        <h2> Family, Safety, Home </h2>
+        <img style="border: 10px solid whitesmoke"; src="static/MoneyCow.jpg" alt="logo" style="padding: 20px;">
     </head>
 
     <body>
