--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -1,14 +1,22 @@
 <!doctype html>
 <html>
-    <head>
-        <title>Bank MoneyMoo</title>
-        <h1>Bank MoneyMoo</h1>
-        <h2> Family, Safety, Home </h2>
-        <img style="border: 10px solid whitesmoke"; src="static/MoneyCow.jpg" alt="logo" style="padding: 20px;">
-    </head>
-
-    <body>
-        <h3>in Bank MoneyMooMoo we care for you and you happiness</h3>
-
-    </body>
+    <center>
+        <head>
+            <title>Bank MoneyMoo</title>
+        </head>
+    
+        <body style="background-color: bisque" >
+            <h1 style="color: rgb(56, 165, 34); font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 60px;">Bank MoneyMoo</h1>
+            <h2> Family, Safety, Reliable </h2>
+            <img style="border: 5px solid rgb(56, 165, 34)"; src="C:\Users\hilae\Desktop\WEB\Hila.Shpigelman\static\MoneyCow.jpg" alt="oops" width="25%" height="25%" >
+        </body>
+    </center>
+   
+    <footer>
+        <span>
+            <a style="font-size: 20px"; href="file:///C:/Users/hilae/Desktop/WEB/Hila.Shpigelman/templates/HomePage.html"> Home </a>
+              | 
+            <a style="font-size: 20px"; href="file:///C:/Users/hilae/Desktop/WEB/Hila.Shpigelman/templates/contact.html"> Contact Us</a>
+        </span>
+    </footer>
 </html>
