--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -1,22 +1,45 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bank MoneyMoo</title>
+  <link rel="stylesheet" href="../static/cssDesign.css">
+  <script src="../static/MooJS.js"> </script>
+</head>
+<body >
     <center>
-        <head>
-            <title>Bank MoneyMoo</title>
-        </head>
-    
-        <body style="background-color: bisque" >
-            <h1 style="color: rgb(56, 165, 34); font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 60px;">Bank MoneyMoo</h1>
-            <h2> Family, Safety, Reliable </h2>
-            <img style="border: 5px solid rgb(56, 165, 34)"; src="C:\Users\hilae\Desktop\WEB\Hila.Shpigelman\static\MoneyCow.jpg" alt="oops" width="25%" height="25%" >
-        </body>
+        <header>
+            <div id="imageheader"> <img id="cowLogo" ; src="../static/logo.jpg" alt="oops"></div>
+            <ul id="nav-bar">
+                <li><a href="../templates/HomePage.html" s>Home</a>
+                </li>
+                <li><a href="../templates/workingOnIt.html">About us</a>
+                </li>
+                <li><a href="../templates/workingOnIt.html">Join us</a>
+                </li>
+                <li><a href="contact.html">Contact</a>
+                </li>
+          </ul>
+        </header>
+   <div id="MainPage">  
+
+                <h2 id="mainSlogen"><div>Family,</div> <div>Safety,</div><div> reliability</div> </h2>
+                <h2 id="slogen">join us today, to help the tommorow!</h2>
+
+            <img id="woman" onclick="changeImage() "  src="../static/womanMoney.jpg" alt="oops">
+    </div>
     </center>
+</body>
    
-    <footer>
-        <span>
-            <a style="font-size: 20px"; href="file:///C:/Users/hilae/Desktop/WEB/Hila.Shpigelman/templates/HomePage.html"> Home </a>
-              | 
-            <a style="font-size: 20px"; href="file:///C:/Users/hilae/Desktop/WEB/Hila.Shpigelman/templates/contact.html"> Contact Us</a>
-        </span>
-    </footer>
+<footer id="footer">
+    <div>
+        <h2>if you have any question please contact us: 03-9123456</h2>
+    </div>
+</footer>
+
+   
 </html>
+
+
