--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -4,32 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bank MoneyMoo</title>
+  <script defer src="../static/MooJS.js"> </script>
   <link rel="stylesheet" href="../static/cssDesign.css">
-  <script src="../static/MooJS.js"> </script>
+  <title>Bank MoneyMoo</title>
 </head>
-<body >
-    <center>
+<body>
+    <center>    
         <header>
             <div id="imageheader"> <img id="cowLogo" ; src="../static/logo.jpg" alt="oops"></div>
-            <ul id="nav-bar">
-                <li><a href="../templates/HomePage.html" s>Home</a>
-                </li>
-                <li><a href="../templates/workingOnIt.html">About us</a>
-                </li>
-                <li><a href="../templates/workingOnIt.html">Join us</a>
-                </li>
-                <li><a href="contact.html">Contact</a>
-                </li>
-          </ul>
         </header>
-   <div id="MainPage">  
+        <nav>
+            <ul id="nav-bar">
+                <li><a href="../templates/HomePage.html" >Home</a></li>
+                <li><a href="../templates/workingOnIt.html">About us</a></li>
+                <li><a href="../templates/workingOnIt.html">Join us</a></li>
+                <li><a href="../templates/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+       
+        <div id="MainPage">  
 
-                <h2 id="mainSlogen"><div>Family,</div> <div>Safety,</div><div> reliability</div> </h2>
-                <h2 id="slogen">join us today, to help the tommorow!</h2>
+            <h2 id="mainSlogen"><div>Family,</div> <div>Safety,</div><div> Reliability</div> </h2>
+            <h2 id="slogen">join us today, to help the tommorow!</h2>
 
             <img id="woman" onclick="changeImage() "  src="../static/womanMoney.jpg" alt="oops">
-    </div>
+        </div>
     </center>
 </body>
    
