--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bank MoneyMoo</title>
-  <link rel="stylesheet" href="../static/cssDesign.css">
-  <script src="../static/MooJS.js"> </script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="../static/MooJS.js"> </script>
+    <link rel="stylesheet" href="../static/cssDesign.css">
+    <title>Contact MoneyMoo</title>
 </head>
 <body>
   
     <center>
         <header>
             <div id="imageheader"> <img id="cowLogo" ; src="../static/logo.jpg" alt="oops"></div>
-            <ul id="nav-bar">
-                <li><a href="../templates/HomePage.html" s>Home</a>
-                </li>
-                <li><a href="../templates/workingOnIt.html">About us</a>
-                </li>
-                <li><a href="../templates/workingOnIt.html">Join us</a>
-                </li>
-                <li><a href="contact.html">Contact</a>
-                </li>
-          </ul>
         </header>
+        <nav>
+            <ul id="nav-bar">
+                <li><a href="../templates/HomePage.html" >Home</a></li>
+                <li><a href="../templates/workingOnIt.html">About us</a></li>
+                <li><a href="../templates/workingOnIt.html">Join us</a></li>
+                <li><a href="../templates/contact.html">Contact</a></li>
+            </ul>
+        </nav>
 
       <form action="" id="ContactForm" onsubmit="sayThankU()">
         <style>    
             body{background:url(../static/money.jpg);}
             </style>
-          <h4 id="instructions"> <p>Please fill in your information in the following form </p> <p>(* is required)</p></h4>
+          <h4 id="instructions"> <p>Please fill in your information in the form </p> <p>(* is required)</p></h4>
         <h4 id="questions"> 
             <div id="Q">
             <label for="firstName">First Name *</label><br>
